Tech Doc: Fixed bugs: Header font fix, width scrollbar for small res fix

--- a/technical-documentation/CSS/style.css
+++ b/technical-documentation/CSS/style.css
@@ -22,6 +22,9 @@ h1, h2, h3 {
     padding: 0;
 }
 
+header {
+    font-family: "Zilla Slab", serif;
+}
 
 .headerText {
     font-family: "Zilla Slab", serif;
@@ -197,6 +200,7 @@ figure {
     pre {
         padding: 8px 16px;
         overflow-x: auto;
+        width: 76vw;
     }
 }
 
@@ -218,6 +222,6 @@ figure {
     }
 
     pre {
-        width: 78vw;
+        width: 72vw;
     }
 }
